# dt-example

./: .gitignore  README.md
.github/workflows/: cmake.yml
lab4/: Makefile  README.md
lab4/src/: circle.cpp  circle.hpp  list.cpp  list.hpp  main.cpp  point.cpp  point.hpp
labs/lab1/: Makefile  Makefile.old
labs/lab1/src/: barrel.cpp  barrel.hpp  lab1  lab1.cpp  matrix.cpp  matrix.hpp  my_string.cpp  my_string.hpp  rect.cpp  rect.hpp  text_wrapper.cpp  text_wrapper.hpp
labs/lab1/tests/: test_bounding_rect.cpp  test_rect_basic_methods.cpp  test_rect_operations.cpp  test_rect_properties.cpp
labs/lab2/: .gitignore  Makefile  lab2.cpp
labs/lab2/src/: basefile.cpp  basefile.hpp  lab2.cpp  my_string.cpp  my_string.hpp
labs/lab2/tests/: README.md  test_base32file.cpp  test_basefile.cpp  test_composition.cpp  test_rlefile.cpp  test_utils.hpp
labs/lab3/: .gitignore  CMakeLists.txt  Makefile
labs/lab3/src/: basefile.cpp  basefile.hpp  bool_array.cpp  bool_array.hpp  lab3  lab3.cpp  matrix.cpp  matrix.hpp  my_string.cpp  my_string.hpp  notification.cpp  notification.hpp  notification_priority_queue.cpp  notification_priority_queue.hpp  notification_queue.cpp  notification_queue.hpp  worker_db.cpp  worker_db.hpp
labs/lab3/tests/: CMakeLists.txt  test_notification_priority_queue.cpp
reports/: lab1.md  lab2.md  lab3.md  lab4.md  lab5.md  lab6.md  lab7.md
reports/coursework/: algorithm.md
